# Sme-Green-Copilot

./: .env.example  .gitignore  API_REFERENCE.md  DEPLOYMENT.md  Dockerfile  GROQ_MIGRATION_COMPLETE.md  HACKATHON_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  N8N_SETUP_GUIDE.md  OPENWEBUI_CONFIGURATION_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TEMPLATES_SETUP.md  create_templates.py  db_init.py  desc.txt  docker-compose.yml  env.example  example_usage.py  ingest.py  main.py  models.py  pdf_processor.py  pyproject.toml  requirements.txt  run.sh  setup.sh  start.sh  test_api.py  test_endpoints.sh  utils.py
app/core/: llm_service.py  pdf_filler.py  pdf_parser.py
config/: compliance_matrix.yaml  n8n_workflow_email.json  openwebui_config.md  recipes.yaml  regulations.yaml  workflows.yaml
templates/: README.md  gdpr_dpia_template_note.txt
